fixed spacing on homepage

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@
   font-family: system-ui;
 }
 .card2 {
-  padding-right: 100px;
+  padding-right: 120px;
 }
 
 .wrapper {
